--- a/newsLetter/index.html
+++ b/newsLetter/index.html
@@ -134,7 +134,7 @@
     </div>
 
     <section>
-      <h2>Destaques da Quizena</h2>
+      <h2>Destaques da Quinzena</h2>
 
       <!-- Bloco 1 -->
       <div class="block">
